# VitahCmake

./: .gitignore  README.md
Demo_01/: CMakeLists.txt
Demo_02/: CMakeLists.txt  main.cpp
Demo_03/: CMakeLists.txt  Demo_3  main.cpp
Demo_04/: CMakeLists.txt  Demo_4
Demo_05/: CMakeLists.txt  Demo_5  main.cpp
Demo_06/: CMakeLists.txt  Demo_6  main.cpp
Demo_07/: main.cpp
Demo_09/main/: CMakeLists.txt
Demo_1/: CMakeLists.txt  Demo_1  main.cpp
Demo_10/main/: CMakeLists.txt  build.sh  main.cpp
Demo_10/pow/: CMakeLists.txt
Demo_11/double/: doubleNum.cpp
Demo_11/main/: CMakeLists.txt  Demo_11  main.cpp
Demo_12/double/: CMakeLists.txt
Demo_12/main/: CMakeLists.txt  Demo_12  halfNum.cpp  halfNum.h  main.cpp
Demo_12/main/pow/: powNum.h
Demo_2/: Demo_2  demo2.h
Demo_3/: CMakeLists.txt
Demo_4/: Demo_4  main.cpp
Demo_5/: CMakeLists.txt
Demo_5/math/: CMakeLists.txt  doubleNum.h
Demo_6/: build.sh
Demo_7/: CMakeLists.txt  Demo_7  halfNum.cpp
Demo_7/main/: CMakeLists.txt  Demo_7  main.cpp
Demo_8/: CMakeLists.txt  Demo_8  halfNum.cpp  halfNum.h  main.cpp
Demo_8/double/: CMakeLists.txt
Demo_8/main/: CMakeLists.txt  Demo_8  main.cpp
Demo_8/pow/: CMakeLists.txt  powNum.cpp
Demo_9/double/: doubleNum.cpp
Demo_9/main/: CMakeLists.txt  Demo_9  main.cpp
